@startuml
set namespaceSeparator ::

class "huertapp::models::crop.dart::Crop" {
  +String uid
  +Map<String, String> name
  +String notificationName
  +Map<String, String> description
  +String iconUrl
  +String imageUrl
  +int germination
  +Map<String, String>? harvest
  +int harvestNotification
  +int maxTemperature
  +int minTemperature
  +int optimalTemperature
  +int? maxWatering
  +int? minWatering
  +int? wateringNotification
  +Map<String, String> watering
  +int? container
  +Map<String, String>? plantingFrame
  +int? depth
  +bool seedbed
  +int? seedsNumber
  +int? transplantNotification
  +Map<String, String>? transplant
  +Map<String, String>? sown
  +Map<String, String>? sownType
  +String toJson()
  +Map<String, dynamic> toMap()
}

class "huertapp::models::daily_prediction.dart::DailyPrediction" {
  +OrigenDiario origen
  +DateTime elaborado
  +String nombre
  +String provincia
  +PrediccionDiaria prediccion
  +int id
  +double version
  +String code
  +List<int> probPrecipitation
  +List<String> skyValue
  +Map<String, List<int>> tempMinMaxValues
  +String toJson()
  +Map<String, dynamic> toMap()
}

"huertapp::models::daily_prediction.dart::DailyPrediction" o-- "huertapp::models::daily_prediction.dart::OrigenDiario"
"huertapp::models::daily_prediction.dart::DailyPrediction" o-- "huertapp::models::daily_prediction.dart::PrediccionDiaria"

class "huertapp::models::daily_prediction.dart::OrigenDiario" {
  +String productor
  +String web
  +String enlace
  +String language
  +String copyright
  +String notaLegal
  +String toJson()
  +Map<String, dynamic> toMap()
}

class "huertapp::models::daily_prediction.dart::PrediccionDiaria" {
  +List<DiaDiaria> dia
  +String toJson()
  +Map<String, dynamic> toMap()
}

class "huertapp::models::daily_prediction.dart::DiaDiaria" {
  +List<ProbPrecipitacionDiaria> probPrecipitacion
  +List<CotaNieveProvDiaria> cotaNieveProv
  +List<EstadoCieloDiario> estadoCielo
  +List<VientoDiario> viento
  +List<CotaNieveProvDiaria> rachaMax
  +HumedadRelativaDiaria temperatura
  +HumedadRelativaDiaria sensTermica
  +HumedadRelativaDiaria humedadRelativa
  +int? uvMax
  +DateTime fecha
  +String toJson()
  +Map<String, dynamic> toMap()
}

"huertapp::models::daily_prediction.dart::DiaDiaria" o-- "huertapp::models::daily_prediction.dart::HumedadRelativaDiaria"

class "huertapp::models::daily_prediction.dart::CotaNieveProvDiaria" {
  +String value
  +String? periodo
  +String toJson()
  +Map<String, dynamic> toMap()
}

class "huertapp::models::daily_prediction.dart::EstadoCieloDiario" {
  +String value
  +String? periodo
  +String descripcion
  +String toJson()
  +Map<String, dynamic> toMap()
}

class "huertapp::models::daily_prediction.dart::HumedadRelativaDiaria" {
  +int maxima
  +int minima
  +List<DatoDiario> dato
  +String toJson()
  +Map<String, dynamic> toMap()
}

class "huertapp::models::daily_prediction.dart::DatoDiario" {
  +int value
  +int hora
  +String toJson()
  +Map<String, dynamic> toMap()
}

class "huertapp::models::daily_prediction.dart::ProbPrecipitacionDiaria" {
  +int value
  +String? periodo
  +String toJson()
  +Map<String, dynamic> toMap()
}

class "huertapp::models::daily_prediction.dart::VientoDiario" {
  +String direccion
  +int velocidad
  +String? periodo
  +String toJson()
  +Map<String, dynamic> toMap()
}

class "huertapp::models::firestore_user.dart::FirestoreUser" {
  +String? uid
  +String name
  +String email
  +List<String?>? devicesTokens
  +String? photoUrl
  +List<String>? weatherLocations
  +String toJson()
  +Map<String, dynamic> toMap()
  +FirestoreUser copy()
}

class "huertapp::models::hourly_prediction.dart::HourlyPrediction" {
  +Origen origen
  +DateTime elaborado
  +String nombre
  +String provincia
  +Prediccion prediccion
  +String id
  +String version
  +String code
  +String currentTemperature
  +String currentSkyValue
  +bool isDay
  +String toJson()
  +Map<String, dynamic> toMap()
}

"huertapp::models::hourly_prediction.dart::HourlyPrediction" o-- "huertapp::models::hourly_prediction.dart::Origen"
"huertapp::models::hourly_prediction.dart::HourlyPrediction" o-- "huertapp::models::hourly_prediction.dart::Prediccion"

class "huertapp::models::hourly_prediction.dart::Origen" {
  +String productor
  +String web
  +String enlace
  +String language
  +String copyright
  +String notaLegal
  +String toJson()
  +Map<String, dynamic> toMap()
}

class "huertapp::models::hourly_prediction.dart::Prediccion" {
  +List<Dia> dia
  +String toJson()
  +Map<String, dynamic> toMap()
}

class "huertapp::models::hourly_prediction.dart::Dia" {
  +List<EstadoCielo> estadoCielo
  +List<HumedadRelativa>? precipitacion
  +List<HumedadRelativa> probPrecipitacion
  +List<HumedadRelativa>? probTormenta
  +List<HumedadRelativa>? nieve
  +List<HumedadRelativa>? probNieve
  +List<HumedadRelativa> temperatura
  +List<HumedadRelativa> sensTermica
  +List<HumedadRelativa> humedadRelativa
  +List<VientoAndRachaMax> vientoAndRachaMax
  +DateTime fecha
  +String orto
  +String ocaso
  +String toJson()
  +Map<String, dynamic> toMap()
}

class "huertapp::models::hourly_prediction.dart::EstadoCielo" {
  +String value
  +String periodo
  +Descripcion? descripcion
  +String toJson()
  +Map<String, dynamic> toMap()
}

"huertapp::models::hourly_prediction.dart::EstadoCielo" o-- "huertapp::models::hourly_prediction.dart::Descripcion"

class "huertapp::models::hourly_prediction.dart::HumedadRelativa" {
  +String value
  +String periodo
  +String toJson()
  +Map<String, dynamic> toMap()
}

class "huertapp::models::hourly_prediction.dart::VientoAndRachaMax" {
  +List<String>? direccion
  +List<String>? velocidad
  +String periodo
  +String? value
  +String toJson()
  +Map<String, dynamic> toMap()
}

class "huertapp::models::hourly_prediction.dart::EnumValues" {
  +Map<String, T> map
  +Map<T, String> reverseMap
  +Map<T, String> reverse
}

class "huertapp::models::hourly_prediction.dart::Descripcion" {
  +int index
  {static} +List<Descripcion> values
  {static} +Descripcion POCO_NUBOSO
  {static} +Descripcion DESPEJADO
  {static} +Descripcion NUBES_ALTAS
  {static} +Descripcion NUBOSO
  {static} +Descripcion CUBIERTO
}

"huertapp::models::hourly_prediction.dart::Descripcion" o-- "huertapp::models::hourly_prediction.dart::Descripcion"

class "huertapp::models::orchard.dart::Orchard" {
  +String? uid
  +String name
  +String? description
  +List<String> owners
  +List<String>? guests
  +String? imageUrl
  +bool owner
  +String toJson()
  +Map<String, dynamic> toMap()
  +Orchard copy()
}

class "huertapp::models::orchard_crop_relation.dart::OrchardCropRelation" {
  +String? uid
  +String cropUid
  +String? orchardUid
  +DateTime sownDate
  +bool wateringNotification
  +int? wateringIntervalDays
  +int? transplantDays
  +bool transplantNotification
  +int germinationDays
  +bool germinationNotification
  +int harvestDays
  +bool harvestNotification
  +String toJson()
  +Map<String, dynamic> toMap()
  +OrchardCropRelation copy()
}

class "huertapp::models::orchard_notification.dart::OrchardNotification" {
  +String uid
  +String relationUid
  +String? dateHarvest
  +String? dateGermination
  +String? dateTransplant
  +String? nextWatering
  +String toJson()
  +Map<String, dynamic> toMap()
}

class "huertapp::models::province.dart::Province" {
  +String provCod
  +String provinceName
  +String autonCod
  +String communityAutonomousCity
  +String capitalProvince
  +String toJson()
  +Map<String, dynamic> toMap()
}

class "huertapp::models::township.dart::Township" {
  +String codigoine
  +String idRel
  +String codGeo
  +String codprov
  +String nombreProvincia
  +String nombre
  +int poblacionMuni
  +double superficie
  +int perimetro
  +String codigoineCapital
  +String nombreCapital
  +String poblacionCapital
  +String hojaMtn25
  +double longitudEtrs89Regcan95
  +double latitudEtrs89Regcan95
  +String origenCoord
  +double altitud
  +String origenAltitud
  +int discrepanteIne
  +String code
  +String toJson()
  +Map<String, dynamic> toMap()
}

@enduml